# ChangeLog for app-admin/system-config-printer-gnome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/system-config-printer-gnome/ChangeLog,v 1.19 2011/01/27 13:24:51 xarthisius Exp $

  27 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  system-config-printer-gnome-1.2.6.ebuild:
  add ~ppc64 wrt #336920

  27 Jan 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Months ago me and Dang agreed on co-maintaining this with Maciej and Gilles
  looked to have no problem with this in that case.

*system-config-printer-gnome-1.2.6 (27 Jan 2011)

  27 Jan 2011; Maciej Mrozowski <reavertm@gentoo.org>
  +system-config-printer-gnome-1.2.6.ebuild,
  +files/system-config-printer-gnome-1.2.6-split.patch:
  Version bump

  28 Oct 2010; Maciej Mrozowski <reavertm@gentoo.org>
  system-config-printer-gnome-1.2.2.ebuild,
  system-config-printer-gnome-1.2.4.ebuild,
  system-config-printer-gnome-1.2.5.ebuild:
  libgnome-python is not needed anymore, bug 343087, add
  ~ppc to 1.2.5 as well (was left out for reason unknown).

  20 Oct 2010; Brent Baude <ranger@gentoo.org>
  system-config-printer-gnome-1.2.4.ebuild:
  Marking system-config-printer-gnome-1.2.4 ~ppc for bug 336920

  20 Oct 2010; Maciej Mrozowski <reavertm@gentoo.org>
  system-config-printer-gnome-1.2.2.ebuild,
  system-config-printer-gnome-1.2.4.ebuild,
  system-config-printer-gnome-1.2.5.ebuild:
  Explicitly require in-tree xmlto as spotted by rangerpb

*system-config-printer-gnome-1.2.5 (19 Oct 2010)

  19 Oct 2010; Maciej Mrozowski <reavertm@gentoo.org>
  +system-config-printer-gnome-1.2.5.ebuild:
  Version bump

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  system-config-printer-gnome-1.2.2.ebuild,
  system-config-printer-gnome-1.2.4.ebuild:
  Add ~alpha/~arm/~ia64/~sh/~sparc wrt #336920

*system-config-printer-gnome-1.2.4 (24 Aug 2010)

  24 Aug 2010; Maciej Mrozowski <reavertm@gentoo.org>
  -system-config-printer-gnome-1.2.3.ebuild,